syntax = "proto3";
option csharp_namespace = "AppLog.Services";
import "google/protobuf/timestamp.proto";
package grpcAppLogService;
//Services
service grpcAppLogService {
    rpc WriteLog (WriteLog_Request) returns (Empty_Response);
    //

}
//======================================================
// Common Messages
//======================================================
message UserCredential {
    string Username = 1;
    string RoleID = 2;
    string AccessToken = 3;
    string ApiKey = 4;
}
message Empty_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
}
message Empty_Request {
    UserCredential Credential = 1;
}

//======================================================
// Messages
//======================================================
message WriteLog_Request {
    UserCredential Credential = 1;
    //
    string ID  = 2;
    int32 LogLevel = 3;
    string Class = 4;
    string Method = 5;
    string Step = 6;
    int32 ErrorCode = 7;
    string ErrorMessage = 8;
    google.protobuf.Timestamp CreatedOn = 9;
}




