syntax = "proto3";
option csharp_namespace = "Insure.Services";
import "google/protobuf/timestamp.proto";
package grpcInsureService;

//Services
service grpcInsureService {    
    //Product
    rpc SaveProduct (SaveProduct_Request) returns (String_Response);
    rpc GetProduct (String_Request) returns (GetProduct_Response);
    rpc GetProductList (String_Request) returns (GetProductList_Response);
   
    //Order
    rpc InitOrder (InitOrder_Request) returns (InitOrder_Response);

}

//======================================================
// Common Messages
//======================================================
message UserCredential {
    string Username = 1;
    string RoleID = 2;
    string AccessToken = 3;
    string ApiKey = 4;
}
message Empty_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
}
message Empty_Request {
    UserCredential Credential = 1;
}
//
message String_Request
{
    UserCredential Credential = 1;
    //
    string StringValue = 2;
}
message String_Response
{
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    string StringValue = 3;
}
message Int_Response
{
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    int32 IntValue = 3;
}

//
//======================================================
// Messages
//======================================================
message GetProductDetail_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    string aaa = 3;
    string bbb = 4;
}
message SaveProduct_Request {
    UserCredential Credential = 1;
    //
    grpcProductModel Record = 2;
}

message grpcProductModel {
    string ID = 1;
    string ProductType = 2;
    string ProductID = 3;
    string ProductName = 4;
    string VendorID = 5;
    string VendorName = 6;
    double InsureAmount = 7;
    double UnitPrice = 8;
    double TaxRate = 9;
    bool IsIncludeVAT = 10;
    int32 Duration = 11;
    string DurationUnit = 12;
    repeated grpcSpecificationModel Specifications = 13;
    string VendorLinks = 14;
    string QALinks = 15;
    string LogoID = 16;
    string VendorLogoID = 17;
    string BuyPolicy = 18;
    string Notes = 19;
    google.protobuf.Timestamp ModifiedOn  = 20;
    int32 UpdMode = 21;
}
message grpcSpecificationModel {
    int32 DspOrder = 1;
    string Title = 2;
    string Content = 3;
    string RecNo = 4;
}
message GetProduct_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    grpcProductModel Record = 3;
}
message GetProductList_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    repeated grpcProductModel Records = 3;
}
message CreateSaleOrder_Request {
    UserCredential Credential = 1;
    //
    grpcSaleOrderModel Record = 2;
}
message grpcSaleOrderModel {
    string ID = 1;
    string OrderID = 2;
    string OwnerFullname = 3;
    string LicensePlate = 4;
    string CusFullname = 5;
    string CusPhone = 6;
    string CusEmail = 7;
    google.protobuf.Timestamp EffectiveSttDate = 8;
    google.protobuf.Timestamp EffectiveEndDate = 9;
    string CityID = 10;
    string CityName = 11;
    string DistrictID = 12;
    string DistrictName = 13;
    string WardID = 14;
    string WardName = 15;
    string Address = 16;
    //Product
    string VendorID = 17;
    string VendorName = 171;
    string ProductID = 172;
    string ProductName = 18;
    int32 Duration = 19;
    string DurationUnit = 20;
    int32 Quantity = 21;
    double UnitPrice = 22;
    double Amount = 23;
    bool IsIncludeVAT = 24;
    double TaxRate = 25;
    double TaxAmount = 26;
    string Currency = 27;
    double ExchangeRate = 28;
    //Status
    google.protobuf.Timestamp RequestTime  = 29;
    google.protobuf.Timestamp PaymentTime  = 30;
    google.protobuf.Timestamp ExpiredTime  = 31;
    bool IsPayRequest = 32;
    bool IsPayDone = 33;
    bool IsIssueCertificate = 34;
    bool IsDelivery = 35;
    bool IsCancel = 36;
    bool IsPayError = 37;
    //
    string TransactionID = 38;
    //
    google.protobuf.Timestamp ModifiedOn  = 39;
    int32 UpdMode = 40;
}

message InitOrder_Request{
    UserCredential Credential = 1;
    //
    grpcSaleOrderModel Record = 2;
}
message InitOrder_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    string InitOrderToken = 3;
    string TransactionID = 4;
}






